# pandas-nlp

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: push-event.yml
examples/: basic.ipynb
pandas_nlp/: __init__.py  cache.py  fasttext_cli.py  model_manager.py  series_accessor.py
pandas_nlp/models/: fasttext_language_model.py  language_model.py  sentence_model.py  spacy_model.py  vector_model.py
tests/: test_series_accessor.py  utils.py
tests/models/: test_fasttext_language_model.py  test_sentence_model.py  test_spacy_model.py  test_vector_model.py
