[tool.poetry]
name = "pandas-nlp"
version = "0.4.1"
description = "Pandas extension with NLP functionalities"
authors = ["Jaume Ferrarons <jaume.ferrarons@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jaume-ferrarons/pandas-nlp"
repository = "https://github.com/jaume-ferrarons/pandas-nlp"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
spacy = "^3.0.0"
requests = "^2.28.1"
appdirs = "^1.4.4"
fasttext = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
black = "^22.8.0"
flake8 = "^5.0.4"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl"}
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
